[CID-686] Upgrading gradle, adding gretty
Upgrading to use gretty over deprecated jetty plugin
Required upgrading to gradle 3.x
Required removing sonar plugin (unsupported in 3.x gradle)
Set default app container to be tomcat7 (e.g. ./gradlew appRun will use tomcat7)